<resources>
    <string name="app_name">MMIRetailAssessment</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log-In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="accounts_list">Accounts List</string>
    <string name="accounts_details">Account Details</string>
    <string name="deposit_withdraw">Deposit and Withdraw</string>
    <string name="new_account">New Account</string>

    <string name="accounts_balance">Account Balance</string>
    <string name="accounts_overdraft">Account Overdraft</string>
    <string name="deposit_text">Deposit</string>
    <string name="withdraw_text">Withdraw</string>
    <string name="amount_text">Enter Amount</string>

    <string name="menu_logout">Logout</string>

    <string name="error_text">An error occurred while loading data!</string>

    <string name="acc_no_text">Balance - %s</string>
    <string name="welcome_text">Welcome, %s %s!</string>

</resources>