<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/username_edtxt_margin_start"
        android:layout_marginLeft="@dimen/username_edtxt_margin_start"
        android:layout_marginTop="@dimen/username_edtxt_margin_top"
        android:layout_marginEnd="@dimen/username_edtxt_margin_end"
        android:layout_marginRight="@dimen/username_edtxt_margin_end"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/password_edtxt_margin_start"
        android:layout_marginLeft="@dimen/password_edtxt_margin_start"
        android:layout_marginTop="@dimen/password_edtxt_margin_top"
        android:layout_marginEnd="@dimen/password_edtxt_margin_end"
        android:layout_marginRight="@dimen/password_edtxt_margin_end"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/login_btn_margin_start"
        android:layout_marginLeft="@dimen/login_btn_margin_start"
        android:layout_marginTop="@dimen/login_btn_margin_top"
        android:layout_marginEnd="@dimen/login_btn_margin_end"
        android:layout_marginRight="@dimen/login_btn_margin_end"
        android:layout_marginBottom="@dimen/login_btn_margin_bottom"
        android:enabled="false"
        android:text="@string/action_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.2" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/loading_margin_start"
        android:layout_marginLeft="@dimen/loading_margin_start"
        android:layout_marginTop="@dimen/loading_margin_top"
        android:layout_marginEnd="@dimen/loading_margin_end"
        android:layout_marginRight="@dimen/loading_margin_end"
        android:layout_marginBottom="@dimen/loading_margin_bottom"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>